--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,10 +25,21 @@ body {
     )
     rgb(var(--background-start-rgb));
   transition: background-color 0.3s ease, color 0.3s ease;
+  overflow-x: hidden;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.container {
+  position: relative;
+  z-index: 1;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
